--- a/practica_1/ejercitacion_4.html
+++ b/practica_1/ejercitacion_4.html
@@ -1,46 +1,56 @@
-<a href="https://www.frro.utn.edu.ar"><img src="./ejemplo_3_files/logoutnwhite.png"  alt="Universidad Tecnologica Nacional"
-style="background-color:black;" width="15%" height="10%" ></a>
-<hr>
-<h1>Año 2008</h1>
-<table border="1">
-    <caption hidden>Exámenes</caption>
-    <th colspan="2">Exámenes</th>
-    <tr>
-        <th rowspan="2" id="fechas"></th>
-        <td>Aprobados</td>
-    </tr>
-    <tr>
-        <td>24/30</td>
-    </tr>
-</table>
-<div>
-    <!--enlaces-->
-    <ol>
-        <li>
-            <a href="#enunciado">Enunciado del examen</a>
-        </li>
-        <li>
-            <a href="" target="_blank">Resolucion</a>
-        </li>
-    </ol>
-</div>
-<form action="mailto:xx@xx.com" enctype=text/plain method="post" target="_blank">
-    <p>Puede realizar consultas completando el siguiente formulario:</p>
-    <label for="mail">e-mail</label>
-    <input type="text" id="mail">
-    <br>
-    <label for="consulta">consulta</label>
-    <textarea id="consulta"></textarea>
-    <br>
-    <button type="submit">Enviar</button>
-    <button type="reset">Borrar</button>
-</form>
-<div id="enunciado">
-    <h2>Enunciado del examen</h2>
-    <p>Ejercicio 1:.................</p>
-    <p>Ejercicio 2:.................</p>
-</div>
-Para mas informacion dirijase a <a>contacto@xx.com</a>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta lang="es" name="author" content="Ivan Biscaldi">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <a href="https://www.frro.utn.edu.ar"><img src="./ejemplo_3_files/logoutnwhite.png"  alt="Universidad Tecnologica Nacional"
+    style="background-color:black;" width="15%" height="10%" ></a>
+    <hr>
+    <h1>Año 2008</h1>
+    <table border="1">
+        <caption hidden>Exámenes</caption>
+        <th colspan="2">Exámenes</th>
+        <tr>
+            <th rowspan="2" id="fechas"></th>
+            <td>Aprobados</td>
+        </tr>
+        <tr>
+            <td>24/30</td>
+        </tr>
+    </table>
+    <div>
+        <!--enlaces-->
+        <ol>
+            <li>
+                <a href="#enunciado">Enunciado del examen</a>
+            </li>
+            <li>
+                <a href="" target="_blank">Resolucion</a>
+            </li>
+        </ol>
+    </div>
+    <form action="mailto:xx@xx.com" enctype=text/plain method="post" target="_blank">
+        <p>Puede realizar consultas completando el siguiente formulario:</p>
+        <label for="mail">e-mail</label>
+        <input type="text" id="mail">
+        <br>
+        <label for="consulta">consulta</label>
+        <textarea id="consulta"></textarea>
+        <br>
+        <button type="submit">Enviar</button>
+        <button type="reset">Borrar</button>
+    </form>
+    <div id="enunciado">
+        <h2>Enunciado del examen</h2>
+        <p>Ejercicio 1:.................</p>
+        <p>Ejercicio 2:.................</p>
+    </div>
+    Para mas informacion dirijase a <a>contacto@xx.com</a>
 
 <script type="text/javascript">
     function init(){
@@ -52,3 +62,5 @@ Para mas informacion dirijase a <a>contacto@xx.com</a>
     }
     init();  
 </script>
+</body>
+</html>
